--- a/serenidad.css
+++ b/serenidad.css
@@ -69,30 +69,15 @@ input, textarea, select {
   src: url(fonts/just-book.woff2), url(fonts/jost-book.woff);
 }
 body {
-  background-color: black;
-  color: #ffffff;
-  font-family: "Jost";
-  font-size: 24px;
+  background-color: white;
+  color: green;
   line-height: 1.5;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  vertical-align: center;
-  min-height: 100vh;
-}
-@media (max-width: 600px) {
-  body {
-    width: 350px;
-    font-size: 16px;
-  }
+  font-family: "Jost";
 }
 
 h1 img {
   width: 24px;
-}
-
-section p {
-  margin: 24px 0 0 0;
+  height: 24px;
 }
 
 /*# sourceMappingURL=serenidad.css.map */
